<resources>
    <string name="app_name">MenuProject</string>
    <string name="new_activity">New Activity</string>
    <string name="sms">SMS</string>
    <string name="phone">Phone</string>
    <string name="web">Web</string>
    <string name="map">Map</string>
    <string name="hello_karl_eshwer">Hello Karl Eshwer</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
</resources>