<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFD96"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_newAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="80dp"
        android:background="@color/colorPrimary"
        android:text="@string/new_activity"
        android:textColor="@color/colorAccent"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="485dp" />

    <Button
        android:id="@+id/button_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="305dp"
        android:text="@string/sms"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/button_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_sms"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="305dp"
        android:text="@string/phone"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/button_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_phone"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="305dp"
        android:text="@string/web"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/button_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_web"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="305dp"
        android:text="@string/map"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_map"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="304dp"
        android:text="@string/share"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>